--- a/.config/htop/htoprc-3.2.2
+++ b/.config/htop/htoprc-3.2.2
@@ -2,7 +2,7 @@
 # The parser is also very primitive, and not human-friendly.
 htop_version=3.2.2
 config_reader_min_version=3
-fields=0 48 17 18 38 39 40 2 46 47 49 1
+fields=0 48 17 18 38 39 40 2 46 47 109 110 111 49 1
 hide_kernel_threads=1
 hide_userland_threads=1
 hide_running_in_container=0
@@ -45,7 +45,7 @@ sort_direction=-1
 tree_sort_direction=1
 tree_view_always_by_pid=0
 all_branches_collapsed=0
-screen:Main=PID USER PRIORITY NICE M_VIRT M_RESIDENT M_SHARE STATE PERCENT_CPU PERCENT_MEM TIME Command
+screen:Main=PID USER PRIORITY NICE M_VIRT M_RESIDENT M_SHARE STATE PERCENT_CPU PERCENT_MEM IO_READ_RATE IO_WRITE_RATE IO_RATE TIME Command
 .sort_key=PERCENT_CPU
 .tree_sort_key=PID
 .tree_view=0
